[gd_scene load_steps=8 format=3 uid="uid://b8ornriwv6j0t"]

[ext_resource type="Texture2D" uid="uid://kgwxw3xpfgkx" path="res://icons/copy.svg" id="1_s4jri"]
[ext_resource type="Script" path="res://root_nft_transfer.gd" id="1_wbl0n"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lpbni"]
bg_color = Color(0.0117647, 0.0823529, 0.145098, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xf4vw"]
content_margin_left = 8.0
bg_color = Color(0.168627, 0.231373, 0.352941, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_amkn8"]
content_margin_left = 8.0
bg_color = Color(0.168627, 0.231373, 0.352941, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g1rig"]
bg_color = Color(0.278431, 0.32549, 0.396078, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kulu4"]
bg_color = Color(0.270588, 0.6, 0.976471, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="RootNftTransfer" type="Node2D"]
script = ExtResource("1_wbl0n")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 644.0
theme_override_styles/panel = SubResource("StyleBoxFlat_lpbni")

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -376.5
offset_top = 40.0
offset_right = 376.5
offset_bottom = 339.0
grow_horizontal = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="Control/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Transfer NFT"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="Control/Panel/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "From"

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Panel/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="sender" type="LineEdit" parent="Control/Panel/VBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_xf4vw")
placeholder_text = "Enter the wallet address"

[node name="senderError" type="Label" parent="Control/Panel/VBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.117647, 0, 1)
theme_override_font_sizes/font_size = 12

[node name="VBoxContainer2" type="VBoxContainer" parent="Control/Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label2" type="Label" parent="Control/Panel/VBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "To"

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Panel/VBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="to" type="LineEdit" parent="Control/Panel/VBoxContainer/VBoxContainer2/HBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_amkn8")
placeholder_text = "Enter the wallet address"

[node name="toError" type="Label" parent="Control/Panel/VBoxContainer/VBoxContainer2"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.117647, 0, 1)
theme_override_font_sizes/font_size = 12

[node name="VBoxContainer3" type="VBoxContainer" parent="Control/Panel/VBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label2" type="Label" parent="Control/Panel/VBoxContainer/VBoxContainer2/VBoxContainer3"]
layout_mode = 2
text = "NFT ID"

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Panel/VBoxContainer/VBoxContainer2/VBoxContainer3"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="nftId" type="LineEdit" parent="Control/Panel/VBoxContainer/VBoxContainer2/VBoxContainer3/HBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_amkn8")
placeholder_text = "Enter the NFT ID"

[node name="nftIdError" type="Label" parent="Control/Panel/VBoxContainer/VBoxContainer2/VBoxContainer3"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.117647, 0, 1)
theme_override_font_sizes/font_size = 12

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 20

[node name="cancel" type="Button" parent="Control/Panel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_g1rig")
text = "Cancel"

[node name="mint" type="Button" parent="Control/Panel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(130, 50)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_kulu4")
text = "Transfer"

[node name="panelResult" type="Panel" parent="Control/Panel"]
visible = false
custom_minimum_size = Vector2(500, 0)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -356.0
offset_top = -221.0
offset_right = 357.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 0

[node name="walletTree" type="Tree" parent="Control/Panel/panelResult"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
columns = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="Control/Panel"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 229.5
offset_top = 460.0
offset_right = 209.5
offset_bottom = 440.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Panel/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 0

[node name="Label" type="Label" parent="Control/Panel/VBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "Address"

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Panel/VBoxContainer2/HBoxContainer"]
clip_contents = true
layout_mode = 2

[node name="address_wallet" type="Label" parent="Control/Panel/VBoxContainer2/HBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Copy" type="Sprite2D" parent="Control/Panel/VBoxContainer2/HBoxContainer/HBoxContainer"]
position = Vector2(124, 14)
texture = ExtResource("1_s4jri")

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/Panel/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/Panel/VBoxContainer2/HBoxContainer2"]
layout_mode = 2
text = "Mnemonic"

[node name="mnemonic_wallet" type="Label" parent="Control/Panel/VBoxContainer2/HBoxContainer2"]
layout_mode = 2

[node name="Copy" type="Sprite2D" parent="Control/Panel/VBoxContainer2/HBoxContainer2"]
position = Vector2(196, 14)
texture = ExtResource("1_s4jri")

[node name="HBoxContainer3" type="HBoxContainer" parent="Control/Panel/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/Panel/VBoxContainer2/HBoxContainer3"]
layout_mode = 2
text = "Public key"

[node name="public_base64_key_wallet" type="Label" parent="Control/Panel/VBoxContainer2/HBoxContainer3"]
layout_mode = 2

[node name="Copy" type="Sprite2D" parent="Control/Panel/VBoxContainer2/HBoxContainer3"]
position = Vector2(196, 14)
texture = ExtResource("1_s4jri")

[node name="HBoxContainer4" type="HBoxContainer" parent="Control/Panel/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/Panel/VBoxContainer2/HBoxContainer4"]
layout_mode = 2
text = "Private key"

[node name="private_key_wallet" type="Label" parent="Control/Panel/VBoxContainer2/HBoxContainer4"]
layout_mode = 2

[node name="Copy" type="Sprite2D" parent="Control/Panel/VBoxContainer2/HBoxContainer4"]
position = Vector2(196, 14)
texture = ExtResource("1_s4jri")

[node name="HBoxContainer5" type="HBoxContainer" parent="Control/Panel/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/Panel/VBoxContainer2/HBoxContainer5"]
layout_mode = 2
text = "Scheme"

[node name="scheme_wallet" type="Label" parent="Control/Panel/VBoxContainer2/HBoxContainer5"]
layout_mode = 2

[node name="Copy" type="Sprite2D" parent="Control/Panel/VBoxContainer2/HBoxContainer5"]
position = Vector2(196, 14)
texture = ExtResource("1_s4jri")

[connection signal="pressed" from="Control/Panel/VBoxContainer/HBoxContainer/cancel" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="Control/Panel/VBoxContainer/HBoxContainer/mint" to="." method="_on_mint_pressed"]
